log
Thu 07 Sep 2023 01:49:43 PM UTC: 
 tests:  0|6
total_score: 0/70
011bde8
Thu 07 Sep 2023 03:31:04 PM UTC: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  1|5
total_score: 10/70
930ab0b
Thu 07 Sep 2023 03:37:30 PM UTC: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:54:13: error: ‘Pair’ has no member named ‘next’
   54 |     new_pair->next = map->buckets[index];
      |             ^~
hashmap.c:56:15: error: expected expression before ‘;’ token
   56 |     map->size+;
      |               ^
Compilation failed
dd68ef7
Thu 07 Sep 2023 03:37:48 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:54:13: error: ‘Pair’ has no member named ‘next’
   54 |     new_pair->next = map->buckets[index];
      |             ^~
Compilation failed
ee9d7c0
Thu 07 Sep 2023 03:44:48 PM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:51:15: error: ‘Pair’ has no member named ‘next’
   51 |       new_pair->next = map->buckets[index];
      |               ^~
Compilation failed
a1cf5be
Thu 07 Sep 2023 03:48:00 PM UTC: 
 hashmap.c | 10 +++-------
 1 file changed, 3 insertions(+), 7 deletions(-)
 tests:  2|5
total_score: 20/70
485881d
Thu 07 Sep 2023 03:52:41 PM UTC: 
 hashmap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:56:23: error: ‘Pair’ has no member named ‘next’
   56 |         while (current->next != NULL) {
      |                       ^~
hashmap.c:57:30: error: ‘Pair’ has no member named ‘next’
   57 |             current = current->next;
      |                              ^~
hashmap.c:59:16: error: ‘Pair’ has no member named ‘next’
   59 |         current->next = new_pair;
      |                ^~
Compilation failed
99999b0
Thu 07 Sep 2023 03:53:34 PM UTC: 
 hashmap.c | 15 ++++-----------
 1 file changed, 4 insertions(+), 11 deletions(-)
 tests:  5|4
total_score: 30/70
8f7ba03
Thu 07 Sep 2023 03:54:52 PM UTC: 
 hashmap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  5|4
total_score: 30/70
85c4193
Thu 07 Sep 2023 04:02:22 PM UTC: 
 hashmap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:100:26: error: ‘Pair’ has no member named ‘next’
  100 |         current = current->next;
      |                          ^~
Compilation failed
d979199
Thu 07 Sep 2023 04:04:26 PM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:96:37: error: array subscript is not an integer
   96 |         Pair* current = map->buckets[index];
      |                                     ^
Compilation failed
ce0b286
Thu 07 Sep 2023 04:04:38 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 30/70
d3028c6
Thu 07 Sep 2023 04:08:31 PM UTC: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  6|4
total_score: 30/70
9733040
Thu 07 Sep 2023 04:09:54 PM UTC: 
 hashmap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  6|4
total_score: 30/70
5027d44
Thu 07 Sep 2023 04:24:52 PM UTC: 
 hashmap.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
 tests:  6|4
total_score: 30/70
1b5b1a6
Thu 07 Sep 2023 04:26:20 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 30/70
4dc5f68
Thu 07 Sep 2023 04:28:40 PM UTC: 
 hashmap.c | 22 ++++++++++------------
 1 file changed, 10 insertions(+), 12 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:112:21: error: ‘i’ undeclared (first use in this function)
  112 |   long original_i = i;
      |                     ^
hashmap.c:112:21: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:123:18: error: ‘original_index’ undeclared (first use in this function); did you mean ‘original_i’?
  123 |     if (index == original_index) {
      |                  ^~~~~~~~~~~~~~
      |                  original_i
hashmap.c:112:8: error: unused variable ‘original_i’ [-Werror=unused-variable]
  112 |   long original_i = i;
      |        ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c63f48b
Thu 07 Sep 2023 04:28:52 PM UTC: 
 hashmap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:112:21: error: ‘i’ undeclared (first use in this function)
  112 |   long original_i = i;
      |                     ^
hashmap.c:112:21: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:123:18: error: ‘original_index’ undeclared (first use in this function); did you mean ‘original_i’?
  123 |     if (index == original_index) {
      |                  ^~~~~~~~~~~~~~
      |                  original_i
hashmap.c:112:8: error: unused variable ‘original_i’ [-Werror=unused-variable]
  112 |   long original_i = i;
      |        ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c4312d7
Thu 07 Sep 2023 04:28:59 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:112:21: error: ‘i’ undeclared (first use in this function)
  112 |   long original_i = i;
      |                     ^
hashmap.c:112:21: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:111:8: error: unused variable ‘index’ [-Werror=unused-variable]
  111 |   long index = hash(key, map->capacity);
      |        ^~~~~
cc1: all warnings being treated as errors
Compilation failed
a00c61a
